Added login page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<a class="u-sr-only u-skip-link" href="#content">Skip to content</a>
 		<header class="c-site-header">
 			<nav class="c-site-header__nav">
-				<img src="images/logos/reflectivity-logo.svg" alt="Reflectivity logo" width="22" height="32" class="c-site-header__logo">
+				<img src="images/logos/reflectivity-icon.svg" alt="Reflectivity logo" width="22" height="32" class="c-site-header__logo">
 				<ul class="o-list-bare c-tabs">
 					<li class="c-tabs__item">
 						<a class="c-tabs__link c-tabs__link--ko" href="#">Elements</a>
@@ -94,7 +94,7 @@
 				<p class="u-text-small">Meta content</p>
 				<h3>Code</h3>
 				<p>Primary buttons should have a class of <code>c-button--primary</code> added.</p>
-				<pre class="o-container--grey"><div class="o-box o-box--small"><code>.c-button--primary {
+				<pre class="o-container--code"><div class="o-box o-box--small"><code>.c-button--primary {
   background-color: $color-primary;
 }</code></div></pre>
 			</div>
@@ -126,7 +126,7 @@
 				</div>
 			</div>
 			<div class="o-box u-border-bottom">
-				<button class="c-button c-button--primary c-button--full-width">Full Width Button</button>
+				<button class="c-button c-button--primary u-12of12">Full Width Button</button>
 			</div>
 			<div class="o-box u-border-bottom">
 				<h2>Modals</h2>
