Added error message login page

--- a/pages/login.html
+++ b/pages/login.html
@@ -9,6 +9,20 @@
 	<body class="o-container--grey u-flex u-align-items-center" style="min-height: 100vh;">
 		<div class="o-container--lg u-center">
 			<img src="../images/logos/reflectivity-logo.svg" alt="Reflectivity logo" width="190" class="u-center u-margin-bottom-md">
+			
+			<div class="c-alert c-alert--error" role="alert">
+				<div class="o-box o-box--small">
+					<div class="o-flag o-flag--small">
+						<div class="o-flag__img">
+							<img src="../images/icons/error.svg" alt="" width="20" height="20" aria-hidden="">
+						</div>
+						<div class="o-flag__body">
+							<p>There is no account created for c.chapman@sterlingindustries.com.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 			<div class="c-card">
 				<div class="o-row o-row--no-gutters">
 					<div class="o-col o-col--last-lg u-7of12-lg u-border-bottom u-border-left-lg u-no-border-bottom-lg">
