--- a/pages/login.html
+++ b/pages/login.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../style.css">
 	</head>
-	<body class="o-container--grey u-flex u-align-items-center" style="min-height: 100vh;">
-		<div class="o-container--lg u-center">
+	<body class="o-container--grey u-flex u-align-items-center u-justify-content-center" style="min-height: 100vh;">
+		<div class="o-container--lg">
 			<img src="../images/logos/reflectivity-logo.svg" alt="Reflectivity logo" width="190" class="u-center u-margin-bottom-md">
 			
 			<div class="c-alert c-alert--error" role="alert">
@@ -36,13 +36,13 @@
 						<div class="o-box">
 							<h1>Sign In</h1>
 							<p>
-								<a href="#" class="c-button u-12of12 u-text-left">
+								<a href="project-list.html" class="c-button u-12of12 u-text-left">
 									<img src="../images/logos/partners/google.svg" alt="Google logo" width="20" class="c-button__icon">
 									Sign in with Google
 								</a>
 							</p>
 							<p>
-								<a href="#" class="c-button u-12of12 u-text-left">
+								<a href="project-list.html" class="c-button u-12of12 u-text-left">
 									<img src="../images/logos/partners/microsoft.svg" alt="Microsoft logo" width="20" class="c-button__icon">
 									Sign in with Microsoft
 								</a>
