Updated empty state to use different utility class for spacing

--- a/pages/project-list-empty-state.html
+++ b/pages/project-list-empty-state.html
@@ -45,7 +45,7 @@
 			</div>
 		</header>
 		<main id="content">
-			<div class="u-flex u-align-items-center u-justify-content-center u-margin-top-lg">
+			<div class="o-box--large u-flex u-align-items-center u-justify-content-center">
 				<p class="c-h1">You do not have any projects yet.</p>
 			</div>
 
