Add list of people in a project

--- a/pages/project/index.html
+++ b/pages/project/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Projects | Reflectivity</title>
+		<title>Wayne Enterprises | Reflectivity</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../style.css">
+		<link rel="stylesheet" href="../../style.css">
 	</head>
 	<body>
 		<a class="u-sr-only u-skip-link" href="#content">Skip to content</a>
 		<header class="c-site-header">
 			<nav class="c-site-header__nav">
-				<img src="../images/logos/reflectivity-icon.svg" alt="Reflectivity logo" width="22" height="32" class="c-site-header__logo">
+				<img src="../../images/logos/reflectivity-icon.svg" alt="Reflectivity logo" width="22" height="32" class="c-site-header__logo">
 				<ul class="o-list-bare c-tabs">
 					<li class="c-tabs__item">
-						<a class="c-tabs__link c-tabs__link--ko is-selected" href="#">Projects</a>
+						<a class="c-tabs__link c-tabs__link--ko" href="../project-list.html">Projects</a>
 					</li>
 				</ul>
 			</nav>
@@ -32,7 +32,7 @@
 								</p>
 							</div>
 							<ul class="o-list-bare">
-								<li><a href="login.html" class="c-list-link c-list-link--small">Sign Out</a></li>
+								<li><a href="../login.html" class="c-list-link c-list-link--small">Sign Out</a></li>
 							</ul>
 						</div>
 					</li>
@@ -40,19 +40,29 @@
 			</nav>
 		</header>
 		<header class="c-page-header">
-			<div class="o-box">
-				<h1>Projects</h1>
+			<div class="o-box u-no-padding-bottom">
+				<h1>Wayne Enterprises</h1>
+				<nav>
+					<ul class="o-list-bare c-tabs">
+						<li class="c-tabs__item">
+							<a href="index.html" class="c-tabs__link  is-selected">Documents</a>
+						</li>
+						<li class="c-tabs__item">
+							<a href="people.html" class="c-tabs__link">People</a>
+						</li>
+					</ul>
+				</nav>
 			</div>
 		</header>
-		<main id="content">
-			<div class="o-box--large u-flex u-align-items-center u-justify-content-center">
-				<p class="c-h1">You do not have any projects yet.</p>
-			</div>
 
-			<a href="project-list.html">List with content</a>
+		<main id="content">
+			<div class="o-box">
+				[UNDER CONSTRUCTION GIF]
+			</div>
+			
 			
 		</main>
-		<script src="../js/popper.js"></script>
-		<script src="../js/scripts.js"></script>
+		<script src="../../js/popper.js"></script>
+		<script src="../../js/scripts.js"></script>
 	</body>
 </html>
