#93 Added button group component

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
 					<button class="c-button c-button--link is-loading" disabled>Link Button</button>
 				</div>
 			</div>
+			<div class="o-box">
+				<h3>Button Groups</h3>
+				<div class="c-button-bar">
+					<div class="c-button-group">
+						<button class="c-button">Button</button>
+						<button class="c-button">Another Button</button>
+						<button class="c-button">A Third Button</button>
+					</div>
+				</div>
+			</div>
 			<div class="o-box u-border-bottom">
 				<button class="c-button c-button--primary u-12of12">Full Width Button</button>
 			</div>
